# ChangeLog for dev-util/netbeans
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  partially unbundled jars needed for 'soa' cluster

  20 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled rest of jars needed for 'mobility' cluster

  18 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  unbundled more 'mobility' cluster jars

  16 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  pkg_postrm() removed

  08 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org> -files/6.0,
  -files/6.1/config.sh,
  -files/6.1/visualweb-JxpsSerializer.java-xerces-2.8.1.patch,
  -netbeans-6.0.ebuild, -files/6.0/config.sh, -files/6.1,
  -files/6.1/nbbuild-build.xml.patch,
  -files/6.1/o.apache.tools.ant.module-build.xml.patch,
  -files/6.0/visualweb-JxpsSerializer.java-xerces-2.8.1.patch,
  -netbeans-6.1-r1.ebuild, -files/6.0/startscript.sh,
  -files/6.1/o.apache.tools.ant.module-external-build.xml.patch,
  -files/6.1/startscript.sh, netbeans-6.5_beta.ebuild,
  -files/6.1/reference.txt, -files/6.1/websvc.jaxws21-build.xml.patch,
  -files/6.1/websvc.jaxws21api-build.xml.patch:
  netbeans 6.1 moved to java-overlay, netbeans 6.0 removed

  18 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled jars needed for 'xml' cluster

  16 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled jars needed for 'php' cluster

  05 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled j2ee cluster jars

  04 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled groovy cluster jars

  04 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled gsf cluster jars

  04 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild: