@@ -1,4 +1,4 @@
 DIST netbeans-6.5beta-200808111757-src.zip 272651333 RMD160 3746042139c8debb60fa704caa98f8a313111ff0 SHA1 4cdc0647fa4f7a56a3c45f9a38b221738b6ec2ea SHA256 5661174f11ef0548fabb39e6511dce5843fe84aa67bcb03e3255ad52095af4b4
-EBUILD netbeans-6.5_beta.ebuild 33685 RMD160 2adf8f7fbcac4f73c421ee1bda22baf0ec9cedcf SHA1 ccac3ca40bc489ff3904bf9d88c159e942cc3b8c SHA256 55c12adf5ddaa9d207b00919608d23a559181f307382d68fe4b9a73df65a51dc
-MISC ChangeLog 26337 RMD160 13e26b85c17115989bc3401b393a7022323f0c9e SHA1 b6e42422694e98849a78c7df83624499081a9c1f SHA256 47531da9d598f29d61eeb01c90e358e2183bdb342d6a8cec1389f942f428230d
+EBUILD netbeans-6.5_beta.ebuild 34661 RMD160 72d539305fa50166348d84cef3f5630658e07843 SHA1 ae70f29940eb26d0791b8d80eae5923d3472b5c6 SHA256 49463c641675f8f06b3fcc35c7c44da7ef2b5e37147b3c6c24c04dc0d4491b7e
+MISC ChangeLog 26468 RMD160 3b56a22d2dd3f265f45c8b13c3519d4b081c4fa7 SHA1 e1a8ebcaa40ae9dd04a89f946af8765b7da7ef5b SHA256 dc98e11d2bf607f72195d7260c9b9804ea018e7c9e0ad32f70dd319d2ee7018a
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
